    - A scanner blacklist: Whether the block should be scanned, and displayed.
    - An ignore whitelist: If the block is added to this, the inventory will be rendered regardless, useful for things that are not full blocks, or something like the Inventory scanner.
    Fixed a couple of bugs.
    Added support itemStacks in the packets equals method.

Build 0.0.014
    Added fancy model for the Inventory Scanner.
    Fixed more rendering.
    Cleaned up more random code.
    Removed CCL, as never really used it.
    Cleaned a large amount of HUD code, seem to be doing that a lot. Mainly because I forget what I do, and I have to write something, or it just seems I spend forever doing nothing.
    Starting to clean the Inventory Scanner code, as it's a complete mess.
    Recipes were removed, because lots of items, and not enough 1.6.
    Fixed some of the glasses packet code. Tad more effective.
    Cleaned up Inventory Scanner renderer code. Looks prettier.
    Made some framework cooler, such as item information.
    Fixed hover boots a ton. Work a lot more like "hover" boots.
    Implemented a blacklist for glasses.
    Hover boots circle thing now fades as time runs out.
    Added a whole new layer of debugging code, should make things easier.
    Fixed packet removing. Inventory scanner now behaves as it should.

Build 0.0.013
    Lost forever.

Build 0.0.012
    Fixed the Inventory Scanner, still a WIP.
    Fixed more rendering, so it WILL be better.
    Flipped the HUD Renderer, so now they render similar to proper items in inventories.
    Started work for the Inventory Scanner model, will be very minimal.
    Fixed the gravity pulling you down with the hover boots.
    Added a recipe for the glasses for people who want to play with them in survival.
    Added support for outside packets, eg display Inventory data without glasses.

Build 0.0.011:
    Fixed a massive amount of rendering for the glasses, should be sexier.